--- a/README.rdoc
+++ b/README.rdoc
@@ -3,5 +3,6 @@ I built a simple blog, where I can create posts (as well as edit and delete them
 
  {View the demo application here}[http://reviewmovies.herokuapp.com/]
 
-I built a movie rating and review application with users, movies, review (on a 1-5 rating system) and the ability to search.
- {View the demo application here}[http://reviewmovies.herokuapp.com/]
+I built a simple blog, where I can create posts (as well as edit and delete them), visitors can comment on posts, and I can log in out out.
+
+{View the demo application here}[http://week-2-blog.herokuapp.com/]
